<resources>
    <string name="app_name">Library App</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="book_author">Book Author</string>
    <string name="book_title">Book Title</string>
    <string name="add">Add</string>
    <string name="add_button_description" />
    <string name="_1">1</string>
    <string name="title_1">Title 1</string>
    <string name="author1">Author1</string>
    <string name="_120">120</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="are_you_a_librarian_or_a_client">Are you a librarian or a client ?</string>
    <string name="librarian">Librarian</string>
    <string name="client">Client</string>

</resources>