<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <!-- CardView qui contient la ligne -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <!-- Contraintes du layout avec ConstraintLayout: Utilisé pour placer les TextView avec des contraintes de positionnement. Chaque TextView est positionné en fonction d'autres éléments à l'aide des propriétés layout_constraint* -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <!-- TextView pour l'ID du livre -->
            <TextView
                android:id="@+id/book_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/book_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/title_1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/book_id_txt"
                app:layout_constraintTop_toTopOf="@+id/book_id_txt" />

            <TextView
                android:id="@+id/book_author_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author1"
                app:layout_constraintStart_toStartOf="@+id/book_title_txt"
                app:layout_constraintTop_toBottomOf="@+id/book_title_txt" />
            <TextView
                android:id="@+id/book_pages_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_120"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>